[gd_scene load_steps=57 format=3 uid="uid://cgxiblhs26fbj"]

[ext_resource type="Script" path="res://components/enemies/Enemy.gd" id="1_g43js"]
[ext_resource type="Material" uid="uid://cb1i58ksue7bq" path="res://scripts/shader/Mob.tres" id="1_ooojd"]
[ext_resource type="AudioStream" uid="uid://dmrh4tt4g784t" path="res://sounds/step_0.wav" id="2_bkb81"]
[ext_resource type="AudioStream" uid="uid://n7csqpcckhsr" path="res://sounds/step_1.wav" id="3_nxci1"]
[ext_resource type="SpriteFrames" uid="uid://b0nhovijexdwn" path="res://components/enemies/Enemy.tres" id="4_l2ntd"]
[ext_resource type="Script" path="res://components/entity/Health.gd" id="5_urrmf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_mjn33"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_g4652"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_x4m1w"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_nswew"]
[ext_resource type="Script" path="res://scripts/FirePoint.gd" id="10_p3nx8"]
[ext_resource type="AudioStream" uid="uid://bnjpjrrd0gw1b" path="res://sounds/fire.wav" id="11_mvlwv"]
[ext_resource type="PackedScene" uid="uid://detu0uglbmgdf" path="res://components/effects/Flash.tscn" id="12_1hgo1"]
[ext_resource type="Script" path="res://components/entity/Hurtbox.gd" id="13_3jk5w"]
[ext_resource type="PackedScene" uid="uid://rk0chw0wq3jb" path="res://components/enemies/View.tscn" id="13_awpf0"]
[ext_resource type="Script" path="res://addons/goutte.animated_shape_2d/animated_shape_2d.gd" id="14_kr387"]
[ext_resource type="Script" path="res://addons/goutte.animated_shape_2d/shape_frame_2d.gd" id="15_0ocyi"]
[ext_resource type="Script" path="res://addons/goutte.animated_shape_2d/shape_frames_2d.gd" id="16_7nvub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb1w3"]
size = Vector2(21, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gly67"]
size = Vector2(21, 33)

[sub_resource type="Resource" id="Resource_tpeqg"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1.5)
disabled = false
shape = SubResource("RectangleShape2D_gly67")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odcbh"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_fx1qy"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_odcbh")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7i801"]
size = Vector2(21, 29)

[sub_resource type="Resource" id="Resource_i0hba"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, 0.5)
disabled = false
shape = SubResource("RectangleShape2D_7i801")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejgh2"]
size = Vector2(21, 34)

[sub_resource type="Resource" id="Resource_saqtq"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2)
disabled = false
shape = SubResource("RectangleShape2D_ejgh2")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahsln"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_d7fcx"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_ahsln")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0p5s"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_n7isg"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_g0p5s")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8d40u"]
size = Vector2(21, 33)

[sub_resource type="Resource" id="Resource_0ej5h"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1.5)
disabled = false
shape = SubResource("RectangleShape2D_8d40u")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdfqj"]
size = Vector2(21, 33)

[sub_resource type="Resource" id="Resource_7qsxl"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1.5)
disabled = false
shape = SubResource("RectangleShape2D_kdfqj")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2pao"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_p5i88"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_m2pao")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lgik"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_wi4ug"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_4lgik")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0nit"]
size = Vector2(21, 32)

[sub_resource type="Resource" id="Resource_hwiqr"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -1)
disabled = false
shape = SubResource("RectangleShape2D_d0nit")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agdw4"]
size = Vector2(21, 34)

[sub_resource type="Resource" id="Resource_lcolt"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2)
disabled = false
shape = SubResource("RectangleShape2D_agdw4")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tusqt"]
size = Vector2(21, 34)

[sub_resource type="Resource" id="Resource_hdj0p"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2)
disabled = false
shape = SubResource("RectangleShape2D_tusqt")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7a21"]
size = Vector2(21, 36)

[sub_resource type="Resource" id="Resource_5o4k1"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -3)
disabled = false
shape = SubResource("RectangleShape2D_u7a21")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kymbw"]
size = Vector2(21, 34)

[sub_resource type="Resource" id="Resource_ineo5"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2)
disabled = false
shape = SubResource("RectangleShape2D_kymbw")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al2ua"]
size = Vector2(21, 35)

[sub_resource type="Resource" id="Resource_hy3ou"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2.5)
disabled = false
shape = SubResource("RectangleShape2D_al2ua")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q78my"]
size = Vector2(21, 36)

[sub_resource type="Resource" id="Resource_77oos"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -3)
disabled = false
shape = SubResource("RectangleShape2D_q78my")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8rlr"]
size = Vector2(21, 34)

[sub_resource type="Resource" id="Resource_3u5dn"]
script = ExtResource("15_0ocyi")
position = Vector2(-1.5, -2)
disabled = false
shape = SubResource("RectangleShape2D_c8rlr")
debug_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_vw21c"]
script = ExtResource("16_7nvub")
data = {
"crouch": [SubResource("Resource_tpeqg"), SubResource("Resource_fx1qy"), SubResource("Resource_i0hba")],
"fall": [SubResource("Resource_saqtq"), SubResource("Resource_d7fcx")],
"idle": [SubResource("Resource_n7isg"), SubResource("Resource_0ej5h"), SubResource("Resource_7qsxl"), SubResource("Resource_p5i88"), SubResource("Resource_wi4ug")],
"jump": [SubResource("Resource_hwiqr"), SubResource("Resource_lcolt")],
"run": [SubResource("Resource_hdj0p"), SubResource("Resource_5o4k1"), SubResource("Resource_ineo5"), SubResource("Resource_hy3ou"), SubResource("Resource_77oos"), SubResource("Resource_3u5dn")]
}

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "states", "hurtbox", "fire_point", "view", "flash", "health", "gun_fire_sound", "step_sound_player") groups=["mob"]]
process_mode = 4
z_index = 200
script = ExtResource("1_g43js")
sprite = NodePath("Sprite")
states = NodePath("States")
hurtbox = NodePath("Hurtbox")
fire_point = NodePath("FirePoint")
view = NodePath("FirePoint/View")
flash = NodePath("FirePoint/Flash")
health = NodePath("Health")
gun_fire_sound = NodePath("FirePoint/FireSound")
step_sound_player = NodePath("StepSound")
step_sounds = Array[AudioStream]([ExtResource("2_bkb81"), ExtResource("3_nxci1")])

[node name="Health" type="Node" parent="."]
script = ExtResource("5_urrmf")
_total = 8.0
_limit = 8.0
_base = 8.0
_invencible_duration = 0.25

[node name="StepSound" type="AudioStreamPlayer" parent="."]
volume_db = -25.0

[node name="States" type="Node" parent="."]
script = ExtResource("6_mjn33")

[node name="Root" type="Node" parent="States"]
script = ExtResource("7_g4652")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="To Death" type="Node" parent="States/Root/Idle"]
script = ExtResource("9_nswew")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="To Run" type="Node" parent="States/Root/Idle"]
script = ExtResource("9_nswew")
to = NodePath("../../Run")
event = &"run"
delay_in_seconds = "0.0"

[node name="To Crouch" type="Node" parent="States/Root/Idle"]
script = ExtResource("9_nswew")
to = NodePath("../../Crouch")
event = &"crouch"
delay_in_seconds = "0.0"

[node name="To Fall" type="Node" parent="States/Root/Idle"]
script = ExtResource("9_nswew")
to = NodePath("../../Fall")
event = &"fall"
delay_in_seconds = "0.0"

[node name="To Jump" type="Node" parent="States/Root/Idle"]
script = ExtResource("9_nswew")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="Run" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="To Death" type="Node" parent="States/Root/Run"]
script = ExtResource("9_nswew")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="To Idle" type="Node" parent="States/Root/Run"]
script = ExtResource("9_nswew")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="To Crouch" type="Node" parent="States/Root/Run"]
script = ExtResource("9_nswew")
to = NodePath("../../Crouch")
event = &"crouch"
delay_in_seconds = "0.0"

[node name="To Fall" type="Node" parent="States/Root/Run"]
script = ExtResource("9_nswew")
to = NodePath("../../Fall")
event = &"fall"
delay_in_seconds = "0.0"

[node name="To Jump" type="Node" parent="States/Root/Run"]
script = ExtResource("9_nswew")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="Crouch" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="To Idle" type="Node" parent="States/Root/Crouch"]
script = ExtResource("9_nswew")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="To Fall" type="Node" parent="States/Root/Crouch"]
script = ExtResource("9_nswew")
to = NodePath("../../Fall")
event = &"fall"
delay_in_seconds = "0.0"

[node name="To Jump" type="Node" parent="States/Root/Crouch"]
script = ExtResource("9_nswew")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="To Death" type="Node" parent="States/Root/Crouch"]
script = ExtResource("9_nswew")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="To Fall" type="Node" parent="States/Root/Jump"]
script = ExtResource("9_nswew")
to = NodePath("../../Fall")
event = &"fall"
delay_in_seconds = "0.0"

[node name="To Death" type="Node" parent="States/Root/Jump"]
script = ExtResource("9_nswew")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="Fall" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="To Idle" type="Node" parent="States/Root/Fall"]
script = ExtResource("9_nswew")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="To Death" type="Node" parent="States/Root/Fall"]
script = ExtResource("9_nswew")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="States/Root"]
script = ExtResource("8_x4m1w")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = ExtResource("1_ooojd")
sprite_frames = ExtResource("4_l2ntd")
animation = &"idle"
frame_progress = 0.417384

[node name="FirePoint" type="Marker2D" parent="." node_paths=PackedStringArray("sprite")]
position = Vector2(13, -2)
gizmo_extents = 5.0
script = ExtResource("10_p3nx8")
sprite = NodePath("../Sprite")

[node name="View" parent="FirePoint" instance=ExtResource("13_awpf0")]
position = Vector2(0, -0.5)

[node name="Flash" parent="FirePoint" instance=ExtResource("12_1hgo1")]
visible = false
position = Vector2(3, 0)

[node name="FireSound" type="AudioStreamPlayer" parent="FirePoint"]
stream = ExtResource("11_mvlwv")
volume_db = -20.0
mix_target = 1

[node name="Hurtbox" type="CollisionShape2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_jb1w3")
script = ExtResource("13_3jk5w")
health = NodePath("../Health")

[node name="AnimatedShape2D" type="Node" parent="." node_paths=PackedStringArray("animated_sprite", "collision_shape")]
script = ExtResource("14_kr387")
animated_sprite = NodePath("../Sprite")
collision_shape = NodePath("../Hurtbox")
shape_frames = SubResource("Resource_vw21c")

[connection signal="invencibility_finished" from="Health" to="." method="_on_health_invencibility_finished"]
[connection signal="invencibility_tick" from="Health" to="." method="_on_health_invencibility_tick"]
[connection signal="state_entered" from="States/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_processing" from="States/Root/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="States/Root/Run" to="." method="_on_run_state_entered"]
[connection signal="state_exited" from="States/Root/Run" to="." method="_on_run_state_exited"]
[connection signal="state_processing" from="States/Root/Run" to="." method="_on_run_state_processing"]
[connection signal="state_entered" from="States/Root/Crouch" to="." method="_on_crouch_state_entered"]
[connection signal="state_processing" from="States/Root/Crouch" to="." method="_on_crouch_state_processing"]
[connection signal="state_entered" from="States/Root/Jump" to="." method="_on_jump_state_entered"]
[connection signal="state_processing" from="States/Root/Jump" to="." method="_on_jump_state_processing"]
[connection signal="state_entered" from="States/Root/Fall" to="." method="_on_fall_state_entered"]
[connection signal="state_processing" from="States/Root/Fall" to="." method="_on_fall_state_processing"]
[connection signal="state_entered" from="States/Root/Death" to="." method="_on_death_state_entered"]
[connection signal="state_processing" from="States/Root/Death" to="." method="_on_death_state_processing"]
